qt6/gen_qdatetimeedit.h

typedef struct QActionEvent QActionEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDateTime QDateTime;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionSpinBox QStyleOptionSpinBox;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTime QTime;
typedef struct QTimeEdit QTimeEdit;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
void* QTimeEdit_metacast(QTimeEdit* self, const char* param1);
int QTimeEdit_metacall(QTimeEdit* self, int param1, int param2, void** param3);
struct miqt_string QTimeEdit_tr(const char* s);
void QTimeEdit_userTimeChanged(QTimeEdit* self, QTime* time);
void QTimeEdit_connect_userTimeChanged(QTimeEdit* self, intptr_t slot);
struct miqt_string QTimeEdit_tr2(const char* s, const char* c);
struct miqt_string QTimeEdit_tr3(const char* s, const char* c, int n);
bool QTimeEdit_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QTimeEdit_virtualbase_metaObject(const void* self);
bool QTimeEdit_override_virtual_metacast(void* self, intptr_t slot);
void* QTimeEdit_virtualbase_metacast(void* self, const char* param1);
bool QTimeEdit_override_virtual_metacall(void* self, intptr_t slot);
int QTimeEdit_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QTimeEdit_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QTimeEdit_virtualbase_sizeHint(const void* self);
bool QTimeEdit_override_virtual_clear(void* self, intptr_t slot);
void QTimeEdit_virtualbase_clear(void* self);
bool QTimeEdit_override_virtual_stepBy(void* self, intptr_t slot);
void QTimeEdit_virtualbase_stepBy(void* self, int steps);
bool QTimeEdit_override_virtual_event(void* self, intptr_t slot);
bool QTimeEdit_virtualbase_event(void* self, QEvent* event);
bool QTimeEdit_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
bool QTimeEdit_override_virtual_wheelEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_wheelEvent(void* self, QWheelEvent* event);
bool QTimeEdit_override_virtual_focusInEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QTimeEdit_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QTimeEdit_virtualbase_focusNextPrevChild(void* self, bool next);
bool QTimeEdit_override_virtual_validate(void* self, intptr_t slot);
int QTimeEdit_virtualbase_validate(const void* self, struct miqt_string input, int* pos);
bool QTimeEdit_override_virtual_fixup(void* self, intptr_t slot);
void QTimeEdit_virtualbase_fixup(const void* self, struct miqt_string input);
bool QTimeEdit_override_virtual_dateTimeFromText(void* self, intptr_t slot);
QDateTime* QTimeEdit_virtualbase_dateTimeFromText(const void* self, struct miqt_string text);
bool QTimeEdit_override_virtual_textFromDateTime(void* self, intptr_t slot);
struct miqt_string QTimeEdit_virtualbase_textFromDateTime(const void* self, QDateTime* dt);
bool QTimeEdit_override_virtual_stepEnabled(void* self, intptr_t slot);
int QTimeEdit_virtualbase_stepEnabled(const void* self);
bool QTimeEdit_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
bool QTimeEdit_override_virtual_paintEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_paintEvent(void* self, QPaintEvent* event);
bool QTimeEdit_override_virtual_initStyleOption(void* self, intptr_t slot);
void QTimeEdit_virtualbase_initStyleOption(const void* self, QStyleOptionSpinBox* option);
bool QTimeEdit_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QTimeEdit_virtualbase_minimumSizeHint(const void* self);
bool QTimeEdit_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QTimeEdit_virtualbase_inputMethodQuery(const void* self, int param1);
bool QTimeEdit_override_virtual_resizeEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_resizeEvent(void* self, QResizeEvent* event);
bool QTimeEdit_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QTimeEdit_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QTimeEdit_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* event);
bool QTimeEdit_override_virtual_changeEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_changeEvent(void* self, QEvent* event);
bool QTimeEdit_override_virtual_closeEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QTimeEdit_override_virtual_hideEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QTimeEdit_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* event);
bool QTimeEdit_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_mouseMoveEvent(void* self, QMouseEvent* event);
bool QTimeEdit_override_virtual_timerEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QTimeEdit_override_virtual_showEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_showEvent(void* self, QShowEvent* event);
bool QTimeEdit_override_virtual_devType(void* self, intptr_t slot);
int QTimeEdit_virtualbase_devType(const void* self);
bool QTimeEdit_override_virtual_setVisible(void* self, intptr_t slot);
void QTimeEdit_virtualbase_setVisible(void* self, bool visible);
bool QTimeEdit_override_virtual_heightForWidth(void* self, intptr_t slot);
int QTimeEdit_virtualbase_heightForWidth(const void* self, int param1);
bool QTimeEdit_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QTimeEdit_virtualbase_hasHeightForWidth(const void* self);
bool QTimeEdit_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QTimeEdit_virtualbase_paintEngine(const void* self);
bool QTimeEdit_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QTimeEdit_override_virtual_enterEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_enterEvent(void* self, QEnterEvent* event);
bool QTimeEdit_override_virtual_leaveEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_leaveEvent(void* self, QEvent* event);
bool QTimeEdit_override_virtual_moveEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QTimeEdit_override_virtual_tabletEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QTimeEdit_override_virtual_actionEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QTimeEdit_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
void QTimeEdit_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);