qt6/gen_qdatetimeedit.nim

proc fcQTimeEdit_metacast(self: pointer, param1: cstring): pointer {.importc: "QTimeEdit_metacast".}
proc fcQTimeEdit_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QTimeEdit_metacall".}
proc fcQTimeEdit_tr(s: cstring): struct_miqt_string {.importc: "QTimeEdit_tr".}
proc fcQTimeEdit_userTimeChanged(self: pointer, time: pointer): void {.importc: "QTimeEdit_userTimeChanged".}
proc fQTimeEdit_connect_userTimeChanged(self: pointer, slot: int) {.importc: "QTimeEdit_connect_userTimeChanged".}
proc fcQTimeEdit_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QTimeEdit_tr2".}
proc fcQTimeEdit_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTimeEdit_tr3".}
proc fQTimeEdit_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QTimeEdit_virtualbase_metaObject".}
proc fcQTimeEdit_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_metaObject".}
proc fQTimeEdit_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QTimeEdit_virtualbase_metacast".}
proc fcQTimeEdit_override_virtual_metacast(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_metacast".}
proc fQTimeEdit_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QTimeEdit_virtualbase_metacall".}
proc fcQTimeEdit_override_virtual_metacall(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_metacall".}
proc fQTimeEdit_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QTimeEdit_virtualbase_sizeHint".}
proc fcQTimeEdit_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_sizeHint".}
proc fQTimeEdit_virtualbase_clear(self: pointer, ): void{.importc: "QTimeEdit_virtualbase_clear".}
proc fcQTimeEdit_override_virtual_clear(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_clear".}
proc fQTimeEdit_virtualbase_stepBy(self: pointer, steps: cint): void{.importc: "QTimeEdit_virtualbase_stepBy".}
proc fcQTimeEdit_override_virtual_stepBy(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_stepBy".}
proc fQTimeEdit_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QTimeEdit_virtualbase_event".}
proc fcQTimeEdit_override_virtual_event(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_event".}
proc fQTimeEdit_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_keyPressEvent".}
proc fcQTimeEdit_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_keyPressEvent".}
proc fQTimeEdit_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_wheelEvent".}
proc fcQTimeEdit_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_wheelEvent".}
proc fQTimeEdit_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_focusInEvent".}
proc fcQTimeEdit_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_focusInEvent".}
proc fQTimeEdit_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QTimeEdit_virtualbase_focusNextPrevChild".}
proc fcQTimeEdit_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_focusNextPrevChild".}
proc fQTimeEdit_virtualbase_validate(self: pointer, input: struct_miqt_string, pos: ptr cint): cint{.importc: "QTimeEdit_virtualbase_validate".}
proc fcQTimeEdit_override_virtual_validate(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_validate".}
proc fQTimeEdit_virtualbase_fixup(self: pointer, input: struct_miqt_string): void{.importc: "QTimeEdit_virtualbase_fixup".}
proc fcQTimeEdit_override_virtual_fixup(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_fixup".}
proc fQTimeEdit_virtualbase_dateTimeFromText(self: pointer, text: struct_miqt_string): pointer{.importc: "QTimeEdit_virtualbase_dateTimeFromText".}
proc fcQTimeEdit_override_virtual_dateTimeFromText(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_dateTimeFromText".}
proc fQTimeEdit_virtualbase_textFromDateTime(self: pointer, dt: pointer): struct_miqt_string{.importc: "QTimeEdit_virtualbase_textFromDateTime".}
proc fcQTimeEdit_override_virtual_textFromDateTime(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_textFromDateTime".}
proc fQTimeEdit_virtualbase_stepEnabled(self: pointer, ): cint{.importc: "QTimeEdit_virtualbase_stepEnabled".}
proc fcQTimeEdit_override_virtual_stepEnabled(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_stepEnabled".}
proc fQTimeEdit_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_mousePressEvent".}
proc fcQTimeEdit_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_mousePressEvent".}
proc fQTimeEdit_virtualbase_paintEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_paintEvent".}
proc fcQTimeEdit_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_paintEvent".}
proc fQTimeEdit_virtualbase_initStyleOption(self: pointer, option: pointer): void{.importc: "QTimeEdit_virtualbase_initStyleOption".}
proc fcQTimeEdit_override_virtual_initStyleOption(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_initStyleOption".}
proc fQTimeEdit_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QTimeEdit_virtualbase_minimumSizeHint".}
proc fcQTimeEdit_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_minimumSizeHint".}
proc fQTimeEdit_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QTimeEdit_virtualbase_inputMethodQuery".}
proc fcQTimeEdit_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_inputMethodQuery".}
proc fQTimeEdit_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_resizeEvent".}
proc fcQTimeEdit_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_resizeEvent".}
proc fQTimeEdit_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_keyReleaseEvent".}
proc fcQTimeEdit_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_keyReleaseEvent".}
proc fQTimeEdit_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_focusOutEvent".}
proc fcQTimeEdit_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_focusOutEvent".}
proc fQTimeEdit_virtualbase_contextMenuEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_contextMenuEvent".}
proc fcQTimeEdit_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_contextMenuEvent".}
proc fQTimeEdit_virtualbase_changeEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_changeEvent".}
proc fcQTimeEdit_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_changeEvent".}
proc fQTimeEdit_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_closeEvent".}
proc fcQTimeEdit_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_closeEvent".}
proc fQTimeEdit_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_hideEvent".}
proc fcQTimeEdit_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_hideEvent".}
proc fQTimeEdit_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_mouseReleaseEvent".}
proc fcQTimeEdit_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_mouseReleaseEvent".}
proc fQTimeEdit_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_mouseMoveEvent".}
proc fcQTimeEdit_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_mouseMoveEvent".}
proc fQTimeEdit_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_timerEvent".}
proc fcQTimeEdit_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_timerEvent".}
proc fQTimeEdit_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_showEvent".}
proc fcQTimeEdit_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_showEvent".}
proc fQTimeEdit_virtualbase_devType(self: pointer, ): cint{.importc: "QTimeEdit_virtualbase_devType".}
proc fcQTimeEdit_override_virtual_devType(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_devType".}
proc fQTimeEdit_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QTimeEdit_virtualbase_setVisible".}
proc fcQTimeEdit_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_setVisible".}
proc fQTimeEdit_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QTimeEdit_virtualbase_heightForWidth".}
proc fcQTimeEdit_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_heightForWidth".}
proc fQTimeEdit_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QTimeEdit_virtualbase_hasHeightForWidth".}
proc fcQTimeEdit_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_hasHeightForWidth".}
proc fQTimeEdit_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QTimeEdit_virtualbase_paintEngine".}
proc fcQTimeEdit_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_paintEngine".}
proc fQTimeEdit_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_mouseDoubleClickEvent".}
proc fcQTimeEdit_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_mouseDoubleClickEvent".}
proc fQTimeEdit_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_enterEvent".}
proc fcQTimeEdit_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_enterEvent".}
proc fQTimeEdit_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_leaveEvent".}
proc fcQTimeEdit_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_leaveEvent".}
proc fQTimeEdit_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_moveEvent".}
proc fcQTimeEdit_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_moveEvent".}
proc fQTimeEdit_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_tabletEvent".}
proc fcQTimeEdit_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_tabletEvent".}
proc fQTimeEdit_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_actionEvent".}
proc fcQTimeEdit_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_actionEvent".}
proc fQTimeEdit_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_dragEnterEvent".}
proc fcQTimeEdit_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_dragEnterEvent".}
proc fQTimeEdit_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_dragMoveEvent".}
